# BinanceTraderTool

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  SKILL.md  cache_atr.patch  fix_admin_view.patch  fix_all.patch  fix_metadata.patch  fix_metadata_progress.patch  fix_metadata_progress_v2.patch  fix_struct.patch  patch_metadata.patch  patch_metadata_2.patch  patch_metadata_3.patch  patch_metadata_candidate.patch  patch_metadata_merge.patch  test_api.rs  update_db.patch
app/: README.md  package-lock.json  package.json
app/src/: App.vue
app/src-tauri/: .gitignore  Cargo.toml  config.json  data.db  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/core/: admin.rs  breadth.rs  config.rs  db.rs  events.rs  indicators.rs  integration_test.rs  metadata.rs  metadata.rs.orig  metadata.rs.rej  mod.rs  models.rs  pipeline.rs  rate_limit.rs  rest.rs  risk.rs  smoke_test.rs  websocket.rs  websocket.rs.orig  websocket.rs.patch  websocket.rs.rej
app/src-tauri/src/core/indicators/: indicators_test.rs
app/src-tauri/src/core/pipeline/: pipeline_test.rs
app/src-tauri/src/engine/: mod.rs  regime.rs  scanner.rs  simulator.rs
system/: danh_gia_he_thong_truoc_va_sau.md  phase0_data_pipeline_spec.md  phase1_market_regime_spec.md  phase2_altcoin_scanner.md  phase3_entry_validation.md  phase4_risk_and_scoring.md  phase5_signal_and_logging.md  phase6_execution_monitoring.md  phase7_backtesting_validation.md  system_overview.md
system/.knowledge/: cac_van_de_da_va_se_lam.md  market_scenario_analysis.md  (+4 more)
(+18 files in other folders)
